# superforge_poetry

./: .gitignore  README.md  __init__.py  cspell.config.yaml  main.py  pyproject.toml  superforge_poetry.code-workspace  superforge_words.txt
backup/dump/SUPERGENE/: book.bson  book.metadata.json  endofbook.bson  endofbook.metadata.json
backup/dump/admin/: system.version.bson  system.version.metadata.json
backup/dump/venvwrap/: venv.metadata.json
books/book01/Styles/: style.css
books/book01/text/: chapter-0002.txt  chapter-0005.txt  chapter-0006.txt  chapter-0007.txt  chapter-0008.txt  chapter-0009.txt  chapter-0010.txt  chapter-0011.md  chapter-0012.txt  chapter-0013.txt  chapter-0014.txt  chapter-0015.txt  chapter-0016.txt  chapter-0017.txt  chapter-0018.txt  chapter-0019.txt  chapter-0020.txt  chapter-0021.txt  chapter-0022.txt  chapter-0023.txt  chapter-0024.txt  chapter-0025.txt  chapter-0026.txt  chapter-0027.txt  chapter-0028.txt  chapter-0029.txt  chapter-0030.txt  chapter-0031.txt  chapter-0032.txt  chapter-0033.txt  chapter-0034.txt  chapter-0035.txt  chapter-0036.txt  chapter-0037.txt  chapter-0038.txt  chapter-0039.txt  chapter-0041.txt  chapter-0042.txt  chapter-0043.txt  chapter-0044.txt  (+380 more)
books/book02/text/: chapter-0425.txt  chapter-0426.txt  chapter-0427.txt  chapter-0428.txt  chapter-0429.txt  chapter-0430.txt  (+452 more)
json/: table_chapters.txt  toc1.json  toc2.json
superforge/: me_classes.py  pushover.py
superforge_poetry/: .project  __init__.py  atlas.py  backupDB.py  book.py  log.py  varience.py  vog.py
tests/: test_superforge_poetry.py
(+2578 files in other folders)
